DSND-2348: Post rebase fix-ups and reformatting
* Made mapToken an interface method
* Fixed a bug in BsonDate where two digit year fields were not being parsed
* Wired in Transformer.transformXXX() methods in to the transform method()
* Tidied up regexes